[gd_scene load_steps=5 format=3 uid="uid://pxs6mhmdxdxm"]

[ext_resource type="Script" path="res://world/objects/interactives/Playmat.gd" id="1_1j1y7"]
[ext_resource type="PackedScene" uid="uid://cxkhujs6shlws" path="res://world/objects/interactives/Interactive.tscn" id="1_6o8ws"]
[ext_resource type="Texture2D" uid="uid://c4gr6gwb8op2j" path="res://world/objects/interactives/playmats.png" id="2_g53f1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iwk2b"]
size = Vector2(22, 12)

[node name="Playmat" instance=ExtResource("1_6o8ws")]
script = ExtResource("1_1j1y7")

[node name="Sprite2D" type="Sprite2D" parent="." index="0"]
texture = ExtResource("2_g53f1")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]
shape = SubResource("RectangleShape2D_iwk2b")

[node name="PlaymatOptions" type="Control" parent="." index="2"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShuffleButton" type="Button" parent="PlaymatOptions" index="0"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_top = -48.0
offset_right = 40.0
offset_bottom = -22.0
grow_horizontal = 2
text = "Shuffle"

[node name="SaveButton" type="Button" parent="PlaymatOptions" index="1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -36.0
offset_right = 27.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "Save"

[connection signal="pressed" from="PlaymatOptions/ShuffleButton" to="." method="_on_shuffle_button_pressed"]
[connection signal="pressed" from="PlaymatOptions/SaveButton" to="." method="_on_save_button_pressed"]
